# witch-doctor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_main.py
witch_doctor/: __init__.py
