[tool.poetry]
name = "witch-doctor"
version = "1.0.0"
description = "Dependency injection for python"
authors = ["Marco Sievers de Almeida Ximit Gaia <im.ximit@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [
    { include = "witch_doctor"},
    { include = "witch_doctor/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mutatest = "^3.1.0"
pylint = "^2.15.10"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
